<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/screenSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/screenSettings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/settingsNameString"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/settingsNameString"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/screenSettings" />

    <EditText
        android:id="@+id/settingsNameStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/settingsNameStore"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/settingsNameString"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="@+id/settingsNameString" />

    <TextView
        android:id="@+id/settingsSoundString"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/settingsSoundString"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/settingsNameString" />

    <Switch
        android:id="@+id/settingsSoundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsSoundSwitch"
        app:layout_constraintBottom_toBottomOf="@+id/settingsSoundString"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="@+id/settingsSoundString" />

    <Button
        android:id="@+id/settingsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="actionSettingsSave"
        android:text="@string/settingsSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsSoundString" />

    <!-- Reset -->

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="48dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsSave" />

    <TextView
        android:id="@+id/settingsResetString"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/settingsResetString"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/settingsResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsResetButton"
        app:layout_constraintBottom_toBottomOf="@+id/settingsResetString"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="@+id/settingsResetString" />

    <!-- -->

</androidx.constraintlayout.widget.ConstraintLayout>